--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="index.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
+    <script src="game.js" defer></script>
+    <script src="task.js" defer></script>
+    <title>Rock paper or scissor</title>
   </head>
-  <body></body>
+  <body>
+    <div class="game">
+      <button class="start">Start the game</button>
+      <select name="options" class="options">
+        <option value="rock">Rock</option>
+        <option value="paper">Paper</option>
+        <option value="scissor">Scissor</option>
+      </select>
+      <button class="submit">Play</button>
+    </div>
+  </body>
 </html>
