showing the results on display

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
   <body>
     <div class="game">
       <button class="start">Start the game</button>
+      <div class="score">
+        <span class="win"></span>
+        <span class="loses"></span>
+      </div>
       <select name="options" class="options">
         <option value="rock">Rock</option>
         <option value="paper">Paper</option>
         <option value="scissor">Scissor</option>
       </select>
       <button class="submit">Play</button>
+      <ul class="result"></ul>
     </div>
   </body>
 </html>
