--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="game">
       <button class="start">Start the game</button>
       <div class="score">
-        <span class="win"></span>
-        <span class="loses"></span>
+        You - <span class="win">0</span> x <span class="loses">0</span> -
+        Computer
       </div>
+      <div class="end-game"></div>
       <select name="options" class="options">
         <option value="rock">Rock</option>
         <option value="paper">Paper</option>
